Se agrega HTML Y SCSS

--- a/index.html
+++ b/index.html
@@ -9,7 +9,37 @@
 </head>
 
 <body>
+    <div id="container">
+        <section id="presentacion">
+            <nav id="navbar">
+                <div id="buscador">
+                    <h2>Buscar</h2>
+                    <label for="buscador">Buscar
+                        <input type="text" id="buscador">
+                    </label>
+                </div>
+                <div>
+                    <h2>Filtros</h2>
+                    <select name="tipo" id="filtro-tipo">
+                    <option value="comic">Comic</option>
+                    <option value="personaje">Personaje</option>
+                </select>
+                    <select name="orden" id="filtro-orden">
+                    <option value="a-z">A-Z</option>
+                    <option value="z-a">Z-A</option>
+                    <option value="mas-nuevos">Mas Nuevos</option>
+                    <option value="mas-viejos">Mas viejos</option>
+                </select>
+                </div>
+            </nav>
+            <div id="banner">
+                <img src="https://estaticos.muyinteresante.es/media/cache/1140x_thumb/uploads/images/gallery/5beaba975bafe86f2c2b41c4/marvel-heroes_0.jpg" alt="imagen marvel">
+            </div>
+        </section>
+        <section id="seccion-comics">
 
+        </section>
+    </div>
 </body>
 
 </html>
