--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscador de Comics</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -14,9 +16,7 @@
             <nav id="navbar">
                 <div id="buscador">
                     <h2>Buscar</h2>
-                    <label for="buscador">Buscar
-                        <input type="text" id="buscador">
-                    </label>
+                    <input type="text" id="buscador">
                 </div>
                 <div>
                     <h2>Filtros</h2>
