Agregado de funcion keydown para el buscador

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="buscador" id="buscador">
                     <!-- <h2>Buscar</h2> -->
                     <label for="buscador">Buscar
-                    <input type="text" id="buscador" class="input-buscador"></label>
+                    <input type="text" id="input-buscador" class="input-buscador"></label>
                 </div>
                 <div class="filtros">
                     <!-- <h2>Filtros</h2> -->
@@ -49,5 +49,6 @@
         </section>
     </div>
 </body>
+<script src="index.js"></script>
 
 </html>
