Arreglo de funcion buscar, y tarjetas

--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
 <body>
     <div id="container">
         <section id="presentacion">
-            <!-- <div id="titulo-seccion" class="titulo-seccion">
-                <div class="titulo">
-                    <h1>BUSCADOR DE COMICS</h1>
-                </div>
-            </div> -->
+
             <div id="banner" class="banner">
 
             </div>
@@ -28,13 +24,8 @@
                         <button type="submit">Buscar</button>
                     </form>
                 </section>
-                <!-- <div class="buscador" id="buscador">
-                     <h2>Buscar</h2> 
-                    <label for="buscador">Buscar
-                    <input type="text" id="input-buscador" class="input-buscador"></label>
-                </div> -->
+
                 <div class="filtros">
-                    <!-- <h2>Filtros</h2> -->
                     <label for="filtros">Filtros
                     <select name="tipo" id="filtro-tipo">
                         <option value="comic">Comic</option>
@@ -52,12 +43,7 @@
             </nav>
         </section>
         <section id="tarjetas">
-            <div id="div-tarjetas">
-                <article class="tarjetas" data-id="${data.id}">
-                    <h2>${data.title}</h2>
-                    <div>${data.dates.description}</div>
-                    <img src="${data.images}" alt="">
-                </article>
+            <div id="div-tarjetas" class="contenedor-tarjetas">
 
             </div>
         </section>
