paginas y footer en html

--- a/index.html
+++ b/index.html
@@ -54,20 +54,30 @@
                 </div>
             </form>
         </div>
-            <div class="cardsSection">
-                <h2 class="cards-h2" id="cardsResultados">Resultados de su busqueda</h2>
-                <p class="cards-p" id="cardsSinResultados"> Sin resultados</p>
-                <div class="cards-container" id="cardsContainer">             
-                </div>
+        <div class="cardsSection">
+            <h2 class="cards-h2" id="cardsResultados">Resultados de su busqueda</h2>
+            <p class="cards-p" id="cardsSinResultados"> Sin resultados</p>
+            <div class="cards-container" id="cardsContainer">             
             </div>
-            <div class="paginas">
-                <button id="firstPage"><i class="fas fa-step-backward"></i></button>
-                <button id="PreviousPage"><i class="fas fa-chevron-circle-left"></i></button>
-                <button id="nextPage"><i class="fas fa-chevron-circle-right"></i></button>
-                <button id="lastPage"><i class="fas fa-step-forward"></i></button>
-            </div>
+        </div>   
+        <div class="paginas">
+        <div>
+            <button>
+                <i id="firstPage" class="fas fa-step-backward fa-3x enabledButton" aria-hidden="true" ></i>
+            </button>
+            <button>
+                <i id="previousPage" class="fas fa-backward fa-3x enabledButton" aria-hidden="true"></i>
+            </button>
+            <button>
+                <i id="nextPage" class="fas fa-forward fa-3x enabledButton" aria-hidden="true"></i>
+            </button>
+            <button>
+                <i id="lastPage" class="fas fa-step-forward fa-3x enabledButton" aria-hidden="true"></i>
+            </button>
         </div>
+    </div>
     </main>
+    <footer></footer>
     <script src="index.js"></script>
 </body>
 
