--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="es-AR">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador de Comics</title>
+    <title>buscadorDeComics</title>
     <script src="https://kit.fontawesome.com/2d575903b5.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
