--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 
 <body>
     <header>
-        <div>
-            <h1>Buscando Comics</h1>
+        <div class="banner">
+
         </div>
-        <div class="banner"></div>
     </header>
     <main>
         <div class="searchSection">
