--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>buscadorDeComics</title>
-    <script src="https://kit.fontawesome.com/2d575903b5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="responsive.css">
+    <script src="https://kit.fontawesome.com/2d575903b5.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <div class="banner">
+
         </div>
     </header>
     <main>
         <div class="searchSection">
             <h2 class="searchTitle-h2">BUSQUEDA DE COMICS</h2>
             <form id="formSearch" class="searchContainer">
-                <div class="seccion-busqueda">
+                <div class="search">
                     <i class="fas fa-search fa-2x"></i>
                     <input name="searchTxt" class="search-input" id ="search" type="text" placeholder=" Escribe tu busqueda aquí">
                 </div>
@@ -51,30 +52,35 @@
                 </div>
             </form>
         </div>
-        <div class="cardsSection">
-            <h2 class="cards-h2" id="cardsResultados">Resultados de su busqueda</h2>
-            <p class="cards-p" id="cardsSinResultados"> Sin resultados</p>
-            <div class="cards-container" id="cardsContainer">             
+        
+        <div class="cardsSection">            
+            <h2 class="cardsSection-h2" id="cardsResultados">Resultados</h2>
+            <p class="cardsSection-p" id="cardsSinResultados">0 Resultados</p>          
+            <div id="cardsContainer" class="cardsContainer">  
             </div>
-        </div>   
-        <div class="paginas">
-        <div>
-            <button>
-                <i id="firstPage" class="fas fa-step-backward fa-3x enabledButton" aria-hidden="true" ></i>
-            </button>
-            <button>
-                <i id="previousPage" class="fas fa-backward fa-3x enabledButton" aria-hidden="true"></i>
-            </button>
-            <button>
-                <i id="nextPage" class="fas fa-forward fa-3x enabledButton" aria-hidden="true"></i>
-            </button>
-            <button>
-                <i id="lastPage" class="fas fa-step-forward fa-3x enabledButton" aria-hidden="true"></i>
-            </button>
         </div>
-    </div>
+        <div class="paginas">
+            <div>
+                <button>
+                    <i id="firstPage" class="fas fa-step-backward fa-3x enabledButton" aria-hidden="true" ></i>
+                </button>
+                <button>
+                    <i id="previousPage" class="fas fa-backward fa-3x enabledButton" aria-hidden="true"></i>
+                </button>
+                <button>
+                    <i id="nextPage" class="fas fa-forward fa-3x enabledButton" aria-hidden="true"></i>
+                </button>
+                <button>
+                    <i id="lastPage" class="fas fa-step-forward fa-3x enabledButton" aria-hidden="true"></i>
+                </button>
+            </div>
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+    </footer>
+
+    
     <script src="index.js"></script>
+
 </body>
 </html>
